updated readme docs and variable semantics

--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -2,7 +2,7 @@
 repo_names:
 - { workspace: '{{ playbook_dir }}/..', repo_name: local-workspace-maintenance }
 - { workspace: '{{ playbook_dir }}/..', repo_name: apigee-opdk-playbook-setup-ansible }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-aio }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-aio } moved into apigee-opdk-playbook-installation-single-region
 - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-baas }
 - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-microgateway }
 - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-mirror }
