Cleaned up a few syntax errors.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-hostfile = ~/.ansible/inventory/vz-edge-1701-aio
+# hostfile = ~/.ansible/inventory/vz-edge-1701-aio
 fact_caching_connection = ~/.ansible/tmp/cache/vz-edge-1701-aio
 log_path = ~/.ansible/tmp/logs/vz-edge-1701-aio.log
 
