Fixed bugs with setup of ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,10 @@
 [defaults]
-# hostfile = ~/.ansible/inventory/vz-edge-1701-aio
-fact_caching_connection = ~/.ansible/tmp/cache/vz-edge-1701-aio
-log_path = ~/.ansible/tmp/logs/vz-edge-1701-aio.log
+hostfile = ~/.ansible/inventory/
+fact_caching_connection = ~/.ansible/tmp/cache/
+log_path = ~/.ansible/tmp/logs/
 
-remote_user = friasca
+# remote_user = friasc
 private_key_file = ~/.ssh/id_rsa
-become_method = pbrun
 
 roles_path = ~/.ansible/roles
 local_tmp = ~/.ansible/tmp
