Fixed bugs with setup of ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 hostfile = ~/.ansible/inventory/
 fact_caching_connection = ~/.ansible/tmp/cache/
-log_path = ~/.ansible/tmp/logs/
+log_path = ~/.ansible/tmp/logs/ansible-default.log
 
 # remote_user = friasc
 private_key_file = ~/.ssh/id_rsa
