Added cyberark authorization token

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -1,4 +1,7 @@
 ---
+# Basic authorization header used to authenticate with Cyberark service
+# service_account_authorization_token: "Basic BASE64_ENCODED_USERNAME"
+
 # AWS credentials
 # aws_access_key:
 # aws_secret_key:
