--- a/repository-custom-properties.yml
+++ b/repository-custom-properties.yml
@@ -5,7 +5,7 @@ apigee_workspace: ~/apigee-workspace
 playbook_workspace: "{{ apigee_workspace }}/apigee-opdk-playbook-workspace"
 role_workspace: "{{ apigee_workspace }}/apigee-opdk-role-workspace"
 repository_secure_endpoint_https: "https://onestash.verizon.com/rest/api/1.0/projects/CELVW"
-repository_secure_endpoint_ssh: git@github.com/carlosfrias
+repository_secure_endpoint_ssh: "ssh://git@onestash.verizon.com:7999/celvw"
 configuration_folders:
 - '{{ ansible_config }}/configurations'
 - '{{ ansible_config }}/inventory'
