updated yum config

--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -112,4 +112,5 @@ role_repos:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-yum-repository-proxy-config }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-lvm-increase-volume-size }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-lvm-create-physical-volume }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-yum-packages }
 
