--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -2,31 +2,32 @@
 config_repos:
 - { workspace: '{{ playbook_dir }}/..', repo_name: local-workspace-maintenance }
 - { workspace: '{{ playbook_dir }}/..', repo_name: apigee-opdk-playbook-setup-ansible }
+- { workspace: '{{ apigee_config }}', repo_name: apigee-opdk-custom-properties }
 
 playbook_repos:
 #- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-aio } moved into apigee-opdk-playbook-installation-single-region
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-baas }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-microgateway }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-mirror }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-monetization }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-baas }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-microgateway }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-mirror }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-monetization }
 - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-single-region }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-third-region }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-two-regions }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-aws-management }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-backup }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-validation }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-expand-region }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-opdk-upgrade }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-postgres-add-remove }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-qpid-add-remove }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-update-message-processor-properties }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-vagrant }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-validate-port-availability }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-samples }
-- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-replication-factor }
-- { workspace: '{{ role_workspace }}', repo_name: apigee-fetch-files }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-third-region }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-two-regions }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-aws-management }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-backup }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-validation }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-expand-region }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-opdk-upgrade }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-postgres-add-remove }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-qpid-add-remove }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-update-message-processor-properties }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-vagrant }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-validate-port-availability }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-samples }
+#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-replication-factor }
 
 role_repos:
+- { workspace: '{{ role_workspace }}', repo_name: apigee-fetch-files }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-cassandra }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-ldap }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-mp }
