--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -115,4 +115,4 @@ playbook_repos:
 #- { workspace: '{{ role_workspace }}', repo_name: apigee-lvm-create-physical-volume }
 #- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-yum-packages }
 #- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-mirror-nginx }
-
+#- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-component-install }
