--- a/repository-custom-properties.yml
+++ b/repository-custom-properties.yml
@@ -11,7 +11,7 @@ configuration_folders:
 - '{{ ansible_config }}/configurations'
 - '{{ ansible_config }}/inventory'
 - '{{ ansible_config }}/tmp/logs'
-- '{{ apigee_config }}'
-- '{{ apigee_security }}/logs_configs'
+- '{{ apigee_config }}/logs_configs'
+- '{{ apigee_security }}'
 - '{{ playbook_workspace }}'
 - '{{ role_workspace }}'
