--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -1,8 +1,10 @@
 ---
 config_repos:
-- { workspace: '{{ playbook_dir }}/..', repo_name: apigee-opdk-playbook-setup-ansible }
-- { workspace: '{{ apigee_config }}', repo_name: apigee-opdk-custom-properties }
+- { workspace: '{{ apigee_workspace }}/..', repo_name: apigee-opdk-playbook-setup-ansible }
+#- { workspace: '{{ apigee_config }}', repo_name: apigee-opdk-custom-properties }
 - { workspace: '{{ playbook_dir }}/..', repo_name: local-workspace-maintenance }
+- { workspace: '{{ repository_secure_endpoint_ssh }}/..', repo_name: apigee-opdk-ansible-configuration-samples }
+- { workspace: '{{ repository_secure_endpoint_ssh }}/..', repo_name: apigee-opdk-ansible-inventory-samples }
 
 playbook_repos:
 - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-aio } # moved into apigee-opdk-playbook-installation-single-region
