--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -1,6 +1,6 @@
 ---
 config_repos:
-- { workspace: '{{ apigee_workspace }}/..', repo_name: apigee-opdk-playbook-setup-ansible }
+- { workspace: '{{ apigee_workspace }}', repo_name: apigee-opdk-playbook-setup-ansible }
 #- { workspace: '{{ apigee_config }}', repo_name: apigee-opdk-custom-properties }
 - { workspace: '{{ apigee_workspace }}', repo_name: local-workspace-maintenance }
 - { workspace: '{{ ansible_config }}', repo_name: apigee-opdk-ansible-configuration-samples }
