--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -7,26 +7,26 @@ config_repos:
 - { workspace: '{{ ansible_config }}', repo_name: apigee-opdk-ansible-inventory-samples }
 
 playbook_repos:
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-aio } # moved into apigee-opdk-playbook-installation-single-region
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-baas }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-microgateway }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-mirror }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-monetization }
 - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-single-region }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-third-region }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-two-regions }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-aws-management }
 - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-backup }
 - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-validation }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-expand-region }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-opdk-upgrade }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-postgres-add-remove }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-qpid-add-remove }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-update-message-processor-properties }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-vagrant }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-validate-port-availability }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-samples }
-#- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-replication-factor }
+##- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-aio } # moved into apigee-opdk-playbook-installation-single-region
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-baas }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-microgateway }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-mirror }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-monetization }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-third-region }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-two-regions }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-aws-management }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-expand-region }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-opdk-upgrade }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-postgres-add-remove }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-qpid-add-remove }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-update-message-processor-properties }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-vagrant }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-validate-port-availability }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-samples }
+- { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-replication-factor }
 
 role_repos:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-fetch-files }
@@ -119,6 +119,3 @@ role_repos:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-yum-packages }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-mirror-nginx }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-component-install }
-- { workspace: '{{ role_workspace }}', repo_name: vz-application-netgroup-access }
-- { workspace: '{{ role_workspace }}', repo_name: vz-cyberark-register-ec2 }
-- { workspace: '{{ role_workspace }}', repo_name: vz-firstboot-operations-verification }
