--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -67,7 +67,7 @@ role_repos:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-component }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-component-installer }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-default-settings }
-- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-epel }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-os-epel }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-license }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-message-processor-bind-environment }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-openjdk }
