--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -119,3 +119,4 @@ role_repos:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-yum-packages }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-mirror-nginx }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-component-install }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-debug-mode }
