updated gce managment

--- a/repository-custom-properties.yml
+++ b/repository-custom-properties.yml
@@ -12,6 +12,7 @@ configuration_folders:
 - '{{ ansible_config }}/inventory'
 - '{{ ansible_config }}/tmp/logs'
 - '{{ apigee_config }}/logs_configs'
+- '{{ apigee_config }}/apigee-opdk-custom-properties'
 - '{{ apigee_security }}'
 - '{{ playbook_workspace }}'
 - '{{ role_workspace }}'
