--- a/repository-custom-properties.yml
+++ b/repository-custom-properties.yml
@@ -10,7 +10,7 @@ repository_secure_endpoint_ssh: "git@github.com:carlosfrias"
 configuration_folders:
 - '{{ ansible_config }}/configurations'
 - '{{ ansible_config }}/inventory'
-- '{{ ansible_config }}/tmp/logs'
+- '{{ ansible_config }}/tmp/'
 - '{{ apigee_config }}/logs_configs'
 - '{{ apigee_config }}/apigee-opdk-custom-properties'
 - '{{ apigee_security }}'
