--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -1,52 +1,68 @@
 ---
-# Basic authorization header used to authenticate with Cyberark service
-# service_account_authorization_token: "Basic BASE64_ENCODED_USERNAME"
-
 # AWS credentials
 # aws_access_key:
 # aws_secret_key:
-# aws_region:
-# security_group:
-# vpc_id:
-# vpc_subnet_id:
-# name_prefix:
-# key_name:
-# owner_contact_info:
-# company_env:
-# department:
-# bag:
-# team_contact_info:
-# env:
-# volume_type:
-# volume_size:
-# delete_on_termination:
-# device_name:
 
-# Apigee credentials
+# Apigee Repo credentials
 # apigee_repo_user:
 # apigee_repo_password:
-# opdk_user_name:
-# opdk_group_name:
+
+# Local Apigee Mirror Credentials
+# apigee_repo_user: admin
+# apigee_repo_password: admin
+
+# Edge Admin User
 # opdk_user_email:
 # opdk_user_pass:
-# grafana_username:
+
+# Edge System User
+# opdk_user_name:
+# opdk_group_name:
+
+# Grafana Credentials
+# grafana_username: admin
 # grafana_password:
+
+# Cassandra Credentials
 # opdk_cass_username:
 # opdk_cass_password:
+
+# Email Credentials
 # opdk_smtp_user:
 # opdk_smtp_password:
 # opdk_ldap_pass:
+
+# Apigee Analytics Postgres credentials
 # pg_user:
 # pg_pass:
 
-# BaaS Credentials
+# Dev Portal Postgres Admin
+# drupal_pg_user: drupal_admin
+# drupal_pg_pass: '{{ opdk_user_pass }}'
+
+# Dev Portal Drupal Admin
+# dp_admin_firstname: "Apigee"
+# dp_admin_lastname: "User"
+# dp_admin_username: "{{ opdk_user_name }}"
+# dp_admin_pwd: "{{ opdk_user_pass }}"
+# dp_admin_email: "{{ opdk_user_email }}"
+
+# Dev Portal Developer Admin
+# dp_devadmin_user: "{{ opdk_user_email }}"
+# dp_devadmin_pwd: "{{ opdk_user_pass }}"
+
+# BaaS Admin Credentials
 # baas_admin_name:
 # baas_admin_email cannot be the same as  baas_superuser_email
 # baas_admin_email:
 # baas_admin_pass:
+
+# BaaS Superuser Credentials
 # baas_superuser_email cannot be the same as baas_admin_email
 # baas_superuser_email:
 # baas_superuser_name:
 # baas_superuser_pass:
+
+# BaaS Email Credentials
 # baas_smtp_user:
 # baas_smtp_user_pass:
