--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -23,3 +23,8 @@ opdk_version: 4.17.01
 # Used to temporarily move and restore system files in order to enable installation of components.
 # temporary_move:
 # - { original_folder: "/etc/yum.repos.d", file_name: "redhat.repo", temporary_holding_folder: "/tmp/yum.repos.d" }
+
+# TODO: Add a sample yum repository configuration
+# Configure a yum repositories
+#apigee_yum_repositories:
+#- { repo_id: 'customer-provided', description: 'Configure customer managed repository', baseurl: 'http://{some customer url and port}'}
