--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -35,6 +35,8 @@
 # Dev Portal Postgres Admin
 # drupal_pg_user: drupal_admin
 # drupal_pg_pass: '{{ opdk_user_pass }}'
+# devportal_pg_admin: devportal_pg_admin
+# devportal_pg_pass: "{{ opdk_user_pass }}"
 
 # Dev Portal Drupal Admin
 # dp_admin_firstname: "Apigee"
