--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -32,15 +32,17 @@
 # pg_user:
 # pg_pass:
 
-# Dev Portal Postgres Admin
+# Drupal Postgres Admin
 # drupal_pg_user: drupal_admin
 # drupal_pg_pass: '{{ opdk_user_pass }}'
-# devportal_pg_admin: devportal_pg_admin
-# devportal_pg_pass: "{{ opdk_user_pass }}"
+
+# Dev Portal Postgres Admin
+# dp_pg_user: devportal_pg_admin
+# dp_pg_pass: "{{ opdk_user_pass }}"
 
 # Dev Portal Drupal Admin
-# dp_admin_firstname: "Apigee"
-# dp_admin_lastname: "User"
+# dp_admin_firstname: "{{ first_name }}"
+# dp_admin_lastname: "{{ last_name }}"
 # dp_admin_username: "{{ opdk_user_name }}"
 # dp_admin_pwd: "{{ opdk_user_pass }}"
 # dp_admin_email: "{{ opdk_user_email }}"
