Cleaned up maintenance playbooks

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -17,11 +17,11 @@
 
 # Grafana Credentials
 # grafana_username: admin
-# grafana_password:
+# grafana_password: '{{ opdk_user_pass }}'
 
 # Cassandra Credentials
-# opdk_cass_username:
-# opdk_cass_password:
+# opdk_cass_username: cassandra
+# opdk_cass_password: '{{ opdk_user_pass }}'
 
 # Email Credentials
 # opdk_smtp_user:
