--- a/repository-custom-properties.yml
+++ b/repository-custom-properties.yml
@@ -3,14 +3,18 @@ ansible_config: "~/.ansible"
 apigee_config: "~/.apigee"
 apigee_security: "~/.apigee-secure"
 apigee_workspace: "~/apigee-workspace"
+
 playbook_workspace: "{{ apigee_workspace }}/apigee-opdk-playbook-workspace"
 role_workspace: "{{ apigee_workspace }}/apigee-opdk-role-workspace"
+
 repository_secure_endpoint_https: "https://github.com/carlosfrias"
 repository_secure_endpoint_ssh: "git@github.com:carlosfrias"
+
 configuration_folders:
 - '{{ ansible_config }}/configurations'
 - '{{ ansible_config }}/inventory'
-- '{{ ansible_config }}/tmp/'
+- '{{ ansible_config }}/logs/'
+- '{{ ansible_config }}/cache/'
 - '{{ apigee_config }}/logs_configs'
 - '{{ apigee_security }}'
 - '{{ playbook_workspace }}'
